app/content_static/styles/styles.css
@import url('https://fonts.googleapis.com/css?family=Lato');

/************************ Styles shared on every page *************************/
a,
.btn {
	color: #ee0000;
	cursor: pointer;
	text-decoration: none;
}
a:hover {
	color: #FFA552;
}

/* default BA5624 */
/* secondary #FFA552*/

h1,
h2,
h3,
h4,
h5 {
	margin-top: 0;
}
p {
	margin-top: 0;
}
.text-center {
	text-align: center;
}
.text-right {
	text-align: right;
}
.underline {
	text-decoration: underline;
}
.btn {
	background: #fff;
	border: 3px solid #ee0000;
	border-width: 3px 0;
	box-shadow: 0 0 2px 0 rgba(0,0,0,0.2);
	display: inline-block;
	padding: 0.5rem 1rem;
}
.btn-alt {
	background: #fff;
	border: 3px solid #d4abff;
	border-width: 3px 0;
	box-shadow: 0 0 2px 0 rgba(0,0,0,0.2);
	color: #000;
	cursor: pointer;
	display: inline-block;
	padding: 0.5rem 1rem;
}
.btn-alt:hover {
	color: #333;
}
.btn-small {
	font-size: 0.7rem;
	padding: 0.12rem 0.25rem;
}
.clearfix::after {
	clear: both;
	display: table;
	content: '';
}
input[type=text],
input[type=password],
input[type=email],
textarea {
	background: #f8f8f8;
	border: 1px solid #ddd;
	box-shadow: inset 0 2px 2px -1px rgba(0,0,0,0.1);
	padding: 0.25rem;
}
textarea {
	resize: none;
}
header {
	border-bottom: 4px solid #ee0000;
	box-shadow: 0px 11px 6px -8px rgba(0,0,0,0.1);
	/*height: 200px;*/
	padding-bottom: 30px;
	position: relative;
}
header input {
	position: relative;
	top:-2px;
}
footer {
	border-top: 4px solid #ee0000;
	box-shadow: 0px -11px 6px -8px rgba(0,0,0,0.1);
	padding: 20px;
}
#breadcrumbs {
	margin-top: 0.5rem;
	margin-bottom: 1rem;
	width: 100%;
}
#breadcrumbs ul {
	list-style: none inside;
	margin: 0;
	padding: 0;
}
#breadcrumbs li {
	display: inline-block;
}
#breadcrumbs li::after {
	content: '>';
	font-size: 0.8rem;
	margin: 0 .5rem;
}
#breadcrumbs li:last-child::after {
	content:'';
}
nav {
	text-align: right;
}
nav ul {
	list-style: none inside;
	margin: 0;
	padding: 0;
}
nav li {
	display: inline-block;
}
nav li a {
	border-top: 2px solid #ee0000;
	box-shadow: 0 0 2px 0 rgba(0,0,0,0.2);
	display: inline-block;
	margin-left: 5px;
	padding: 5px 10px;
}
nav li a:hover {
	border-color: #FFA552;
}
/* using flexbox allows the styling that switches between one/two column very
simple, I simply need to include an element as a child of the <main> with a
fixed width */
@media screen and (min-width: 768px) {
	main {
		flex-direction: row;
	}
	#sidebar {
		margin-right: 1rem;
		width: 320px;
	}
	#posts {
		flex: 1;
	}
}
main {
	background: #fafafa;
	display: flex;
	flex-wrap: wrap;
	padding-bottom: 30px;
}
main > * {
	margin-bottom: 20px;
}
body {
	margin: 0;
}
header,
main {
	padding: 0 0.5rem;
}
main > * {
	width: 100%;
}
/************************ home page styles *************************/
#posts {
	margin-top: 35px;
}
#posts article,
#sidebar article,
.post {
	background: #fff;
	border-top: 4px solid #FFA552;
	box-shadow: 0 6px 6px -4px rgba(0,0,0,0.1);
	padding: 0.5rem;
	margin-bottom: 0.5rem;
}
#sidebar article {
	border-color: #ac52ff;
}
#sidebar {
	margin-top: 35px;
}
@media screen and (max-width: 767px) {
	#sidebar {
		width: 100%;
	}
}
#sidebar h2 {
	background: #f1e4ff;
	border-bottom: 4px solid #ac52ff;
	margin-left: -0.5rem;
	margin-right: -0.5rem;
	margin-top:-0.5rem;
	padding: 0.5rem;
}
#posts h3 {
	margin-bottom: 0;
}
.author {
	color: #aaa;
	display: block;
	font-family: Lato, arial, helvetica, 'sans-serif';
	font-size: 0.7rem;
	font-weight: normal;
}
.thread-right .author {
	margin-top: -0.2rem;
}
.thread-right {
	color: #ccc;
	font-family: Lato;
	float: right;
	text-shadow: 1px 1px rgba(255,255,255,0.4);
}
.thread-right .btn-alt {
	margin-left: 1rem;
}
#post-header {
	padding: 0.5rem;
}
.replies {
	display: inline-block;
	margin-top: 4px;
}
/************************ single column centered  *************************/
/*.single-centered form{
	float: left;
	margin: 0 50%;
	transform: translateX(-50%);
}
.single-centered  form > div
 {
	margin-bottom: 10px;
}*/
/************************ register page  *************************/

#register {
	background: #fff;
	box-shadow: 0 6px 6px -4px rgba(0,0,0,0.1);
	margin: 0 auto 35px auto;
	padding: 0 2rem 2rem 2rem;
	text-align: center;
	width: auto;
	max-width: 400px;
}
#register h2 {
	background: #fff7e4;
	border: 4px solid #FFA552;
	border-width: 4px 0;
	margin: 0 -2rem 20px -2rem;
	padding: 0.5rem;
}
#register input[type=text],
#register input[type=password],
#register input[type=email] {
	min-width: 300px;
}
#register input {

	margin-bottom: 1rem;
}
#image-upload div {
	margin-bottom: 5px;
}
#image-upload input {
	color: #666;
}
/************************ thread page  *************************/
#thread {
	margin-top: 35px;
	flex: 1;
}
#btnEditThread {
	margin-bottom: 1rem;
}
.thread-content > h3 {
	background: #fff7e4;
	border: 4px solid #FFA552;
	border-width: 4px 0;
	margin: 0;
	padding: 0.5rem;
}
.thread-content p {
	background: #fffcf4;
	border: 1px solid #fff2e7;
    margin: 0;
    padding: 20px;
}
.thread-content img {
	height: 40px;
	float: right;
	margin-top: 10px;
	margin-right: 0.5rem;
	margin-left: 0.5rem;
	width: 40px;
}
.response-by {
	font-size: 0.8rem;
}
.post {
	position: relative;
}
.post img {
	float: right;
	height: 40px;
	width: 40px;
}
.post .date-posted {
	color: #aaa;
	font-size: 0.8rem;
	position: absolute;
	right: 0.5rem;
	bottom: 0.5rem;
}
.post p {
	margin-top: 20px;
}
#respond {
	background: #fff;
	border-top: 4px solid #FFA552;
	box-shadow: 0px 11px 6px -8px rgba(0,0,0,0.1);
	padding: 0.5rem;
}
#respond textarea {
	box-sizing: border-box;
	resize: none;
	width: 100%;
}
.manage_content {
	flex: 1;
	align-self: flex-start;
	margin-top: 35px;
}
.manage_content .entry {
	background: #fff;
	border-top: 4px solid #FFA552;
	box-shadow: 0 6px 6px -4px rgba(0,0,0,0.1);
	padding: 0.5rem;
}
.manage_content input,
.manage_content textarea {
	margin-bottom: 0.5rem;
	max-width: 400px;
	width: 100%;
}
.manage_content textarea {
	height: 100px;
}
#btnSubmitThread {
	margin-top: 20px;
}
#missing {
	padding: 2rem;
	text-align: center;
}
#missing img {
	width: 300px;
}
#profile-image {
	height: auto;
	width: 80px;
}
#profile h2 {
	background: #fff7e4;
  border: 4px solid #FFA552;
  border-width: 4px 0;
  margin: 0 0 20px 0;
  padding: 0.5rem;
	text-align: center;
}
#profile form {
	padding: 0 1rem;
	width: 100%;
}
#profile table {
	margin: 0 auto;
}
#profile table td {
	padding: 10px;
}
#search {
	align-self: flex-start;
	flex: 1;
}
#search > div {

	background-color: #fffcf4;
	border: 1px solid #fff2e7;
	margin-top: 35px;
	padding-bottom: 20px;
	text-align: center;
}
#search h2 {
	background: #fff7e4;
  border: 4px solid #FFA552;
  border-width: 4px 0;
  margin: 0 0 20px 0;
  padding: 0.5rem;
}
#search [type=text] {
	min-width: 300px;
}
#btnSearch {
	margin-top: 20px;
}
.results {
	margin-top: 2rem;
}
.results ul {
	list-style: none inside;
	padding: 0;
	text-align: left;
}
.results li {
	display: block;
	clear: both;
	margin-bottom: 20px;
}
#user_results li {
	padding: 0.5rem;
}
.results ul.striped > li:nth-child(2n+1) {
	background: rgba(0,0,0,0.05);
}
.results img {
	float: left;
	height: auto;
	margin: 0 0.5rem 0.5rem 0;
	width: 50px;
}
#content_results img {
	float: right;
	margin: 0 0 0.5rem 0.5rem;
}
#content_results .user {
	float: right;
}
.post_header {
	border-bottom: 1px solid #ffb6b6;
	padding: 0.5rem;
}
#content_results ul ul {
	padding: 0.5rem;
}
#content_results > ul > li {
	border: 1px solid #ffb6b6;
}
#content_results .search-username,
#content_results .search-email {
	margin-right: 60px;
}
.ui-posts .search-username {
	margin-right: 0!important;
}
#content_results > ul > li {
	margin-bottom: 40px;
}
#forgot_password {
	background: #fff;
	box-shadow: 0 6px 6px -4px rgba(0,0,0,0.1);
	margin: 0 auto 35px auto;
	padding: 0 2rem 2rem 2rem;
	text-align: center;
	width: auto;
}
#forgot_password h2 {
	background: #fff7e4;
	border: 4px solid #FFA552;
	border-width: 4px 0;
	margin: 0 -2rem 20px -2rem;
	padding: 0.5rem;
}
#forgot_password [type=email] {
	min-width: 300px;
}
#btnForgotSubmit {
	margin-top: 1.5rem;
}

#login {
	background: #fff;
	box-shadow: 0 6px 6px -4px rgba(0,0,0,0.1);
	margin: 0 auto 35px auto;
	padding: 0 2rem 2rem 2rem;
	text-align: center;
	width: auto;
}
#login h2 {
	background: #fff7e4;
	border: 4px solid #FFA552;
	border-width: 4px 0;
	margin: 0 -2rem 20px -2rem;
	padding: 0.5rem;
}
#login input,
#login a {
	display: inline-block;
	margin-bottom: 1rem;
}

#recover_password {
	background: #fff;
	box-shadow: 0 6px 6px -4px rgba(0,0,0,0.1);
	margin: 0 auto 35px auto;
	padding: 0 2rem 2rem 2rem;
	text-align: center;
	width: auto;
}
#recover_password h2 {
	background: #fff7e4;
	border: 4px solid #FFA552;
	border-width: 4px 0;
	margin: 0 -2rem 20px -2rem;
	padding: 0.5rem;
}
#recover_password input {
	display: block;
	margin-bottom: 1rem;
	margin-left: auto;
	margin-right: auto;
}

